--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "post-create-project-cmd": [
             "yii\\composer\\Installer::postCreateProject",
             "yii\\composer\\Installer::postInstall",
-            "zcore\\composer\\Installer::postSetNamespace"
+            "zcore\\composer\\Installer::postSetNamespace --colors=always"
         ]
     },
     "extra": {
