加入自动化创建数据库配置文件，自动链接数据库的功能；修复codecept配置文件路径错误的bug

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "post-create-project-cmd": [
             "yii\\composer\\Installer::postCreateProject",
             "yii\\composer\\Installer::postInstall",
-            "zcore\\composer\\Installer::postSetNamespace"
+            "zcore\\composer\\Installer::postSetNamespace",
+            "zcore\\composer\\Installer::createLocalConfig"
         ]
     },
     "extra": {
