--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "yiisoft/yii2": "~2.0.13",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
+        "facebook/webdriver" : "^1.0.1",
         "zcore/zcore" : "dev-master"
     },
     "require-dev": {
